--- a/styles.css
+++ b/styles.css
@@ -29,34 +29,22 @@
     margin-top: 40%;
 }
 
-
-
-.aboutMeText {
-    max-width: 25%;
-    text-align: center;
-   margin-left: 20%;
-   height: 60%;
-  width: 55%;
-   margin-left: 50%
-}
-
 .aboutImg{
     height: 37%;
     border-radius: 10% 10%;
-    margin-left: 25%;
 }
 
 .button{
     background-color: transparent;
     border-radius: 10% 10%;
-    width: 150%;
+    width: 150px;
     opacity: 50%;
 }
 
 
 .portfolio {
     text-align: center;
-    height: 50em;
+    height: 40em;
 }
 
 .contact {
@@ -69,7 +57,7 @@
     background-repeat: no-repeat;
     flex-direction: column;
     height: 500px;
-    margin-left: 1%;
+    
     
 }
 
@@ -121,6 +109,22 @@
 
 #footerText {
     opacity: 70%;
+}
+
+/* Portfolio section */
+.cssCreature {
+    height: 30vh;
+    width: 50vh;
+}
+
+.catFact {
+    height: 30vh;
+    width: 50vh; 
+}
+
+.staticLayout {
+    height: 30vh;
+    width: 50vh; 
 }
 
 
